domain-specific-language/demo/src/jvmMain/kotlin/BNFdefinition.txt
<program> ::= <statement>*
<statement> ::= <city> | <let> | <if>
<city> ::= "city" <string> "{" <city_element>* "}"
<city_element> ::= <road> | <building> | <park> | <river> | <restaurant> | <school> | <townhall> | <church> | <stadium>
<road> ::= "road" <string> "{" <lines>* "}"
<lines> ::= "line" "(" <point> <point> ");" <lines> | "bend" "(" <point> <point> <number> ");" <lines> | ε
<building> ::= "building" <string> "{" "box" <point> <point> "}"
<park> ::= "park" <string> "{" "circ" <point> <number> "}"
<river> ::= "river" <string> "{" "poly" <point_list> "}"
<restaurant> ::= "restaurant" <string> <point>
<school> ::= "school" <string> <point>
<townhall> ::= "townhall" <string> <point>
<church> ::= "church" <string> <point>
<stadium> ::= "stadium" <string> <point>
<let> ::= "let" <string> "=" <number>;
<if> ::= "if" <condition> "{" <city> "}"
<condition> ::= <number> <comparison> <number>
<point> ::= "(" <number> "," <number> ")"
<point_list> ::= "(" <point> <point_list_tail> ")"
<point_list_tail> ::= "," <point> <point_list_tail> | ε
<number> ::= [0-9]+
<string> ::= "[a-z_]+"
<comparison> ::= ">" | "<" | "=="


točke:
od osnovnih 6 nimamo 1. točke(nevtralen element)
od nadgradnje:
    1. spremenljivke (let spremenljivka = 5;)
    2. izjave ( box (spremenljivka, 2), (4, 3))
    3. if stavek ( if spremenljivka > var {...})
    4. dodatni elementi(park, river, restaurant, school, townhall, church, stadium)
    (park celjski_park { circ (1, 1), 2 }
                   river sava { poly ((2, 3), (4, 6), (8, 8)) }
                   restaurant hut_burger (13, 7)
                   school fri (15, 7)
                   townhall obcina_ljubljana (10, 4)
                   church peter (4, 9)
                   stadium stozice (8, 8)
)
    5 .Dodatni ukazi(poly ((2, 3), (4, 6), (8, 8)))
